syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/variables";
package api.variables;

enum VariableType {
	SCRIPT = 0;
	TEXT = 1;
	NUMBER = 2;
}

message Variable {
	string id = 1;
	string name = 2;
	optional string description = 3;
	VariableType type = 4;
	string response = 5;
	string eval_value = 6;
	string channel_id = 7;
}

message GetAllResponse {
	repeated Variable variables = 1;
}

message GetByIdRequest {
	string id = 1;
}

message CreateRequest {
	string name = 1;
	optional string description =2;
	VariableType type = 3;
	string response = 4;
	string eval_value = 5;
}

message DeleteRequest {
	string id = 1;
}

message PutRequest {
	string id = 1;
	CreateRequest variable = 2;
}

